# KTranslator

./: .gitignore  Cargo.toml  KTranslator.py  MANIFEST.in  README.md  build.rs  capture_test.rs  languages.csv  requirements.txt  run.py  setup.py  tree.md
.cargo/: config.toml
data/: languages.csv  ocr_mapping.csv
models/ppocr/: .gitkeep
src/: main.rs
src/adapters/: mod.rs
src/adapters/capture/: mod.rs  screenshots_capture.rs  screenshots_crate_adapter.rs
src/adapters/ocr/: builtin_paddle_ocr.rs  builtin_paddle_ocr_adapter.rs  craft_text_detector_adapter.rs  factory.rs  manga.rs  manga109_yolo_ocr.rs  manga_ocr_onnx_adapter.rs  mod.rs  nms_utils.rs  non_max_suppression_utils.rs  ocr_adapter_factory.rs  ocr_factory.rs  onnx_engine.rs  yolo.rs  (+8 more)
src/core/: background_result_dispatcher.rs  chinese_convert.rs  coordinator.rs  dispatcher.rs  error.rs  layout.rs  mod.rs  model.rs  pipeline_execution_result.rs  ports.rs  prompt_builder.rs  region_slot_state.rs  slot.rs  spell_correction.rs  text_cleaner.rs  text_cleaning_pipeline.rs  text_layout_analyzer.rs  types.rs  utils.rs  worker.rs
src/infra/: mod.rs  settings.rs  win32.rs
src/infrastructure/: asset_download_manager.rs  asset_manager.rs  assets.rs  mod.rs  settings.rs  thai_word_segmenter.rs  win32.rs
src/ui/: app.rs  app_init.rs  crop_overlay.rs  font_loader.rs  fonts.rs  i18n.rs  live_frame.rs  mod.rs  overlay.rs  overlay_renderer.rs  region_picker.rs
src/user_interface/: app.rs  application.rs  application_initializer.rs  application_services.rs  font_loader.rs  i18n.rs  live_frame.rs  mod.rs  overlay_renderer.rs  region_overlay.rs  region_selection_overlay.rs  transparent_overlay_renderer.rs
(+84 files in other folders)
