[package]
name = "ktranslator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "blocking"] }
eframe = { version = "0.31", features = ["default_fonts"] }
egui = "0.31"
parking_lot = "0.12"
directories = "6"
screenshots = "0.8"
dxgcap = "0.2.4"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
base64 = "0.22"
regex = "1"
unicode-normalization = "0.1"
windows = { version = "0.62.2", features = ["Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Foundation", "Foundation_Collections", "Globalization", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_UI_HiDpi", "Win32_UI_Shell"] }
threadpool = "1.8.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sys-locale = "0.3"
ort = { version = "2.0.0-rc.12", features = ["copy-dylibs", "directml", "cuda", "tensorrt", "ndarray"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.17"
wordninja = "0.1"
oar-ocr = "0.6"



[build-dependencies]
winres = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[profile.release]
opt-level = 3
lto = "thin"          # Faster than "true" (Full LTO)
codegen-units = 16    # Parallel compilation (Fast builds)
panic = "abort"
strip = true
